gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue16020.d
version https://git-lfs.github.com/spec/v1
oid sha256:5426d5e79aabdcd85f16b8138538be98700cd56ffbd2f991942e781c9efe6e97
size 517
